--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
@@ -1,17 +1,6 @@
 <div class="row events-menu">
     <ul>
-        <li class="event-item non-active">
-            <a title="Event name 2">Event name 2</a>
-        </li>
-        <li class="event-item active">
-            <a title="AstraZeneca 2016 Annual Party">AstraZeneca 2016 Annual Party</a>
-        </li>
-        <li class="event-item non-active">
-            <a title="Event name 3">Event name 3</a>
-        </li>
-        <li class="event-item non-active">
-            <a title="Event name 4">Event name 4</a>
-        </li>
+
     </ul>
 
     <div class="arrows">
@@ -36,7 +25,7 @@
     </label>
     <ul>
         <li class="active-item">
-            Event details
+            <a href="/dashboard/events">Event details</a>
         </li>
         <li>
             Messages
@@ -48,7 +37,7 @@
             Payments
         </li>
         <li>
-            Feedback
+            <a href="/dashboard/feedbacks">Feedback</a>
         </li>
     </ul>
 </div>
