--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -243,8 +243,8 @@
                                 <input id="event_time" type="text" class="form-control" placeholder="Evening" name="event_time">
                             </div>
                             <div class="col-lg-6 no-pad-right">
-                                <label for="event-country">Country</label>
-                                <input disabled type="text" class="form-control" id="event-country" placeholder="United Kingdom" name="country">
+                                <label for="event_country">Country</label>
+                                <input disabled type="text" class="form-control" id="event_country" placeholder="United Kingdom" name="country">
                             </div>
                             <!--
                                                         <div class="col-lg-offset-1 col-lg-4 form-group">
