--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -244,7 +244,7 @@
                             </div>
                             <div class="col-lg-6 no-pad-right">
                                 <label for="event_country">Country</label>
-                                <input disabled type="text" class="form-control" id="event_country" placeholder="United Kingdom" name="country">
+                                <input disabled type="text" class="form-control" id="event_country" placeholder="United Kingdom" value="United Kingdom" name="country">
                             </div>
                             <!--
                                                         <div class="col-lg-offset-1 col-lg-4 form-group">
@@ -284,8 +284,8 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12 form-group">
-                            <label for="event_address">Address</label>
-                            <input type="text" class="form-control" id="event_address" placeholder="Type the address here...">
+                            <label for="event_location">Address</label>
+                            <input type="text" class="form-control" name="location" id="event_location" placeholder="Type the address here...">
                         </div>
                     </div>
                     <!--
