--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -255,7 +255,7 @@
             </div>
             <div class="col-2">
                 <form class="message-form" action="#">
-                    <textarea class="textarea" placeholder="Write your message" id="chat-room">${sendText}</textarea>
+                    <textarea class="textarea" maxlength="512" placeholder="Write your message" id="chat-room">${sendText}</textarea>
                     <div class="upload-box">
                         <div class="row">
                             <input type="file" name="files[]" id="filer_input1" class="chatFileUpload" multiple="multiple">
