--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/buttons.css
@@ -86,6 +86,17 @@
 }
 
 
+.btn {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    border: 0;
+}
+.btn:focus {
+    box-shadow: none;
+    outline: none !important;
+}
+
 
 
 
