--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/freeQuote.css
@@ -107,10 +107,9 @@
 }
 .free-quote-modal.modal-registered .quote-box p{
     font-size: 16px;
-    color: #000;
     color: rgba(0, 0, 0, .68);
     line-height: 26px;
-    margin: 0 0 10px;
+    margin: 0 30px 10px;
 }
 .free-quote-modal.modal-registered.bio .modal-body{
     padding: 30px 10px 25px;
@@ -146,7 +145,7 @@
     border: 2px solid #EEEEEE!important;
     border-radius: 6px;
     box-shadow: none!important;
-    padding: 8px 12px 9px 9px;
+    padding: 4px 12px 4px 9px;
     outline: none!important;
     font-size: 14px;
     font-family: LatoRegular;
@@ -207,7 +206,7 @@
     column-gap: 0;
     padding: 0;
     background-color: rgba(97, 109, 197, 0.06);
-    padding: 0px 0 2px 5px;
+    padding: 0 0 16px 0;
 }
 .padd_bottom_15px {
     padding-bottom: 15px;
@@ -247,6 +246,9 @@
 
 .free-quote-modal .custom-checkbox label {
     font-size: 14px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+
 }
 .free-quote-modal .popup_artist_info {
     padding: 15px 15px 15px 25px;
@@ -296,7 +298,7 @@
     position: absolute;
     font-family: LatoRegular;
     right: 35px;
-    top: 2px;
+    top: -20px;
     font-size: 14px;
 }
 .free-quote-modal .quote-profile-desc {
@@ -351,6 +353,7 @@
 
 .free-quote-modal .form-group label {
     font-size: 16px;
+    font-weight: 400;
     font-family: LatoBold;
     color: rgb(72, 91, 189);
     display: block;
@@ -1008,7 +1011,6 @@ h4.eventChooseRequest select:active {
     }
     .comment_area_counter {
         right: 5px;
-        top: 4px;
     }
     .free-quote-modal .quote-profile-desc {
         padding-top: 9px;
@@ -1080,7 +1082,6 @@ h4.eventChooseRequest select:active {
     }
     .comment_area_counter {
         right: 5px;
-        top: 4px;
     }
     .free-quote-modal .quote-profile-info {
         width: calc(100% - 90px);
