--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -3,7 +3,7 @@
 <main class="dashboard feedback client" id="client-event-details">
     <div class="container no-pad client_event_details">
         {% include 'ActedLegalDocsBundle:Profile:client/client_menu.html.twig' %}
-        <div class="col-md-6 col-sm-6 left_column">
+        <div class="col-md-6 col-sm-6 left_column" v-bind:data-event-id="event.id">
             <div class="row">
                 <div class="printer_icon">
                     <p>
@@ -12,16 +12,16 @@
                     </p>
                 </div>
                 <label for="event_name">Event name</label>
-                <input type="text" maxlength="60" v-bind:focusout="foo" v-bind:value="event.title" class="form-control enable_toggler" id="event_name" placeholder="Christmas party" name="name">
+                <input type="text" maxlength="60"  v-model.lazy.trim="event.title" v-bind:value="event.title" class="form-control enable_toggler" id="event_name" placeholder="Christmas party" name="name">
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 no-pad-left">
                     <label for="event_date">Date</label>
-                    <input type="text" class="date-picker form-control enable_toggler" id="event_date" v-bind:value="event.starting_date" placeholder="05/04/2016">
+                    <input type="text" class="date-picker form-control enable_toggler" v-model="event.starting_date" id="event_date" v-bind:value="event.starting_date" placeholder="05/04/2016">
                 </div>
                 <div class="col-lg-6 col-md-6 no-pad-right">
                     <label class="col-xs-12 no-pad" for="event_days_duration">1 day/multiple days</label>
-                    <select class="enable_toggler" data-class="selections-white low-select" name="event_days_duration" id="event_duration">
+                    <select disabled class="enable_toggler" data-class="selections-white low-select" name="event_days_duration" id="event_duration">
                         <option value="0">1-day event</option>
                         <option value="1">2-day event</option>
                         <option value="2">3-day event</option>
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 no-pad-left">
                     <label for="event_time">Event timing</label>
-                    <input id="event_time" v-bind:value="event.timing" type="text" class="form-control enable_toggler" placeholder="Evening" name="event_time">
+                    <input id="event_time" v-model.lazy.trim="event.timing" v-bind:value="event.timing" type="text" class="form-control enable_toggler" placeholder="Evening" name="event_time">
                 </div>
                 <div class="col-lg-6 col-md-6 no-pad-right">
                     <label for="event-country">Country</label>
@@ -40,19 +40,18 @@
             </div>
             <div class="row">
                 <label for="event_address">Address</label>
-                <input type="text" class="form-control enable_toggler" v-bind:value="event.location" id="event_address" placeholder="Type the address here...">
+                <input type="text" v-model.lazy.trim="event.location" class="form-control enable_toggler" v-bind:value="event.location" id="event_address" placeholder="Type the address here...">
             </div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 no-pad-left">
                     <label for="venue_type">Venue type</label>
-                    <!--<v-select :options="['some', 'some2']"></v-select>-->
                     <select class="select_width_101 enable_toggler" data-class="selections-white low-select" name="venue_type" id="venue_type" v-model="selectedVenue">
-                        <option v-for="venue in venues" v-bind:value="venue">${venue.venue_type}</option>
+                        <option v-for="venue in venues" v-bind:value="venue.id">${venue.venue_type}</option>
                     </select>
                 </div>
                 <div class="col-lg-6 col-md-6 no-pad-right">
                     <label for="guests_count">Number of guests</label>
-                    <select class="select_width_101 enable_toggler" data-class="selections-white low-select" name="number_of_guests" id="guests_count" v-model="selectedGuest">
+                    <select class="select_width_101 enable_toggler" data-class="selections-white low-select" name="number_of_guests" id="guests_count" v-model.lazy="selectedGuest">
                         <option v-for="guest in guests" v-bind:value="guest.value">${ guest.text }</option>
                     </select>
                 </div>
@@ -77,7 +76,7 @@
                             <h3>Frederic Sharp</h3>
                         </div>
                         <div class="col-md-8 total_summ">
-                            <h3>£ 5000</h13>
+                            <h3>£ 5000</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -162,7 +161,7 @@
                             <h3>Frederic Sharp</h3>
                         </div>
                         <div class="col-md-8 total_summ">
-                            <h3>£ 5000</h13>
+                            <h3>£ 5000</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -243,5 +242,4 @@
         </div>
     </div>
 </main>
-
 {% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
