hide right column (temporary)

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -62,7 +62,7 @@
                 <textarea readonly maxlength="200" class="form-control additional_info_input enable_toggler" id="additional_info" placeholder="Put your comments here"></textarea>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6 right_column">
+        <div class="col-md-6 col-sm-6 right_column" style="visibility: hidden;">
             <div class="printer_icon">
                 <p>
                     <i class="fa fa-print" aria-hidden="true"></i>
