--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -67,7 +67,7 @@
     {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
 {% endif %}
 <script src="{{ asset('js/javascript.js') }}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
+    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>#}
     <script type="text/javascript" src="https://npmcdn.com/vue-select@latest"></script>
 <script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key={{googlemaps.key}}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
