Fix bug  - when you not authorized you can connect artist to event / Add popup and integrate with vuejs and old logic / fix bugs related with rewritung events between requestQuote /logic and creating event / change logic creating event // Add additional logic for connecting event with artist and change old / change connecting address for creating event popup / change mapping for event offer and event / change api for getting events for client /change logic related with event on frontend for profile and request quote

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -61,6 +61,7 @@
 </footer>
 {% include 'ActedLegalDocsBundle:Default:quoteModal.html.twig' %}
 {% include 'ActedLegalDocsBundle:Default:quotationModal.html.twig' %}
+{% include 'ActedLegalDocsBundle:Default:eventModal.html.twig' %}
 {% if app.user %}
 
 {% else %}
